--- a/exceptions/build.gradle
+++ b/exceptions/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'net.rewerk.webstore'
-version = '1.0-SNAPSHOT'
+version = '1.0.0-RELEASE'
 
 repositories {
     mavenCentral()
