Fixed bugs in security configurations, prepared to deploy

--- a/discovery/src/main/resources/application.yml
+++ b/discovery/src/main/resources/application.yml
@@ -2,7 +2,9 @@ server:
   port: 8081
 
 spring:
-  config:
-    import: configserver:http://localhost:8888
   application:
     name: discovery
+  profiles:
+    active: cloud
+  config:
+    import: configserver:http://config-service:8888
