--- a/service-reviews/src/main/resources/application.yml
+++ b/service-reviews/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
   application:
     name: service-reviews
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-service:8888
   profiles:
-    active: caffeine,kafka,feign,resourceserver,jpa,eureka-client
+    active: caffeine,kafka-cloud,feign-cloud,resourceserver-cloud,jpa,eureka-client-cloud,cloud,metrics-cloud
