--- a/service-orders/src/main/resources/application.yml
+++ b/service-orders/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
   application:
     name: service-orders
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-service:8888
   profiles:
-    active: eureka-client,kafka,caffeine,jpa,feign,resourceserver
+    active: eureka-client-cloud,kafka-cloud,caffeine,jpa,feign-cloud,resourceserver-cloud,cloud,metrics-cloud
