--- a/service-uploads/src/main/resources/application.yml
+++ b/service-uploads/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
   application:
     name: service-uploads
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-service:8888
   profiles:
-    active: kafka,resourceserver,eureka-client
+    active: kafka-cloud,resourceserver-cloud,eureka-client-cloud,cloud,metrics-cloud
