--- a/service-users/src/main/resources/application.yml
+++ b/service-users/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
   application:
     name: service-users
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-service:8888
   profiles:
-    active: caffeine,feign,jpa,resourceserver,eureka-client
+    active: caffeine,feign-cloud,jpa,resourceserver-cloud,eureka-client-cloud,cloud,metrics-cloud
